Fix multiple rate product custom message overlaping

--- a/assets/styles/mybooking-engine-product-list.css
+++ b/assets/styles/mybooking-engine-product-list.css
@@ -81,7 +81,6 @@
   bottom: 0;
   font-size: 12px;
   font-weight: 600;
-  line-height: 1;
 }
 
 .mybooking-product_list .mybooking-product_body {
